slr/src/build/snapshots/slr__build__ffn__tests__ffn_recursive.snap
---
source: slr/src/build/ffn.rs
expression: ffn
---
Ffn {
    first: {
        NonterminalId(
            0,
        ): {
            0,
            1,
            2,
            4,
        },
        NonterminalId(
            1,
        ): {
            0,
            1,
            2,
            4,
        },
        NonterminalId(
            2,
        ): {
            6,
        },
    },
    follow: {
        NonterminalId(
            0,
        ): {
            3,
            4,
            5,
            6,
        },
        NonterminalId(
            1,
        ): {
            3,
        },
        NonterminalId(
            2,
        ): {
            3,
            6,
        },
    },
    nullable: {
        1,
        2,
    },
}
